tests/diagnostics/negative/parser/multiple_toplevel_errors.vit
bad_one
bad_two
bad_three
